2000-12-10  Jeffrey Stedfast  <fejj@helixcode.com>
	Beginning of the GMIME_PGP_MIME branch.

	* md5-utils.[c,h]: Added.

	* gmime-exception*: An exception implementation stolen from Camel.

	* pgp-utils.[c,h]: PGP interface code stolen from Spruce and
	Evolution and modified to better handle binary data streams rather
	than only text streams. Also made it so that the program using
	GMime can specify the PGP program at run-time thus making it so
	that there are no build-time dependencies on a PGP program.

	* pgp-mime.[c,h]: A PGP/MIME (rfc2015) implementation using
	pgp-utils and gmime-exception. It goes untested so far but I think
	it should work, though I'd hesitate to say it's a perfect
	implementation.

2000-12-09  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-part.c (g_mime_part_set_boundary): Generate a random
	boundary if passed boundary is NULL.

2000-12-07  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-message.c (multipart_get_body): Traverses a MIME Part and
	'always' extracts the body assuming it exists. Extracts the
	preffered text type if it exists, otherwise returns the type less
	preferred.
	(g_mime_message_get_body): Use multipart_get_body if the toplevel
	part is a multipart.

2000-12-05  Jeffrey Stedfast  <fejj@helixcode.com>

	* README: Updated with more RFCs, etc.

	* rfc/* Added a bunch more rfcs of interest.

2000-12-04  Jeffrey Stedfast  <fejj@helixcode.com>

	* test-mime.c: Added test code for the address parser.

	* gmime-utils.c (g_mime_utils_quoted_encode_step): Updated. No
	longer need to special-case whitespace chars as they have been put
	into the gmime_special_table (a while ago).

2000-12-02  Jeffrey Stedfast  <fejj@helixcode.com>

	* Makefile.am: Install gmime.m4

	* gmime.m4: Added.

2000-12-02  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-part.c (g_mime_part_foreach): New convenience function for
	manipulating each subpart of a mime part.

	* gmime-message.c (g_mime_message_foreach_part): New convenience